# TrixyNet

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main.s  main_old.s
Include/MnistMaster/: mnist_reader_common.hpp  mnist_reader_less.hpp
Include/Timer/: timer.h
Include/Trixy/Lique/: ilique_vector.hpp
Trixy/Collection/: collection.hpp
Trixy/Lique/: ilique_base.hpp  ilique_linear.hpp  ilique_matrix.hpp  ilique_vector.hpp  lique_linear.hpp  lique_matrix.hpp  lique_vector.hpp
Trixy/Neuro/: neuro_core.hpp  neuro_core_alpha.hpp  neuro_functional.hpp  neuro_optimizer.hpp
cmake/: TrixyNetConfig.cmake
include/: profiling.h
include/Timer/: timer.h
include/Trixy/: Base.hpp  Core.hpp
include/Trixy/Buffer/: Buffer.cpp  Buffer.hpp  Core.hpp
include/Trixy/Buffer/Detail/: MacroScope.hpp  MacroUnscope.hpp
include/Trixy/Collection/: collection.hpp
include/Trixy/Container/: Container.hpp  ContainerCore.hpp  ContainerRequire.hpp  Core.hpp  IContainer.hpp  container.hpp  icontainer.hpp
include/Trixy/Detail/: FunctionDetail.hpp  MacroScope.hpp  MacroUnscope.hpp  MetaMacro.hpp  TrixyMeta.hpp
include/Trixy/ILique/: Base.hpp  Core.hpp  ILiqueBase.hpp  ILiqueCore.hpp  ILiqueLinear.hpp  ILiqueMatrix.hpp  ILiqueVector.hpp  Linear.hpp  Matrix.hpp  Tensor.hpp  Vector.hpp  ilique_base.hpp  ilique_core.hpp  ilique_linear.hpp  ilique_matrix.hpp  ilique_vector.hpp
include/Trixy/ILique/Detail/: ILiqueMeta.hpp  MacroScope.hpp  MacroUnscope.hpp  macro_scope.hpp
include/Trixy/Lique/: Base.hpp  BaseTensor.hpp  Core.hpp  Linear.hpp  LiqueBaseLocker.hpp  LiqueBaseTensor.hpp  LiqueCore.hpp  LiqueLinear.hpp  LiqueMatrix.hpp  LiqueMatrixLocker.hpp  LiqueRequire.hpp  LiqueTool.hpp  LiqueVector.hpp  LiqueVectorLocker.hpp  Matrix.hpp  Shape.hpp  Tensor.hpp  TensorBase.hpp  Tool.hpp  Vector.hpp  ilique_base.hpp  ilique_linear.hpp  ilique_matrix.hpp  ilique_vector.hpp  lique_core.hpp  lique_linear.hpp  lique_matrix.hpp  lique_tensor_base.hpp  lique_tensor_id.hpp  lique_tool.hpp  lique_vector.hpp
include/Trixy/Lique/Detail/: FunctionDetail.hpp  LiqueMeta.hpp  MacroScope.hpp  MacroUnscope.hpp  lique_meta.hpp  macro_scope.hpp  macro_unscope.hpp
include/Trixy/Locker/: Base.hpp  BaseLocker.hpp  Container.hpp  ContainerLocker.hpp  Core.hpp  LockerCore.hpp  Matrix.hpp  MatrixLocker.hpp  Serialization.hpp  Tensor.hpp  Vector.hpp  VectorLocker.hpp
include/Trixy/Locker/Detail/: LockerMeta.hpp  MacroScope.hpp  MacroUnscope.hpp
include/Trixy/Neuro/: Core.hpp  FFNN_functional.hpp  FFNN_serializer.hpp  NeuroCore.hpp  neuro_core.hpp  neuro_functional.hpp  neuro_optimizer.hpp  neuro_serializer.hpp
include/Trixy/Neuro/Checker/: Accuracy.hpp  Core.hpp
include/Trixy/Neuro/Checker/Detail/: MacroScope.hpp  MacroUnscope.hpp
include/Trixy/Neuro/Detail/: FunctionDetail.hpp  MacroScope.hpp  MacroUnscope.hpp  TrixyNetMeta.hpp  macro_scope.hpp  macro_unscope.hpp  neuro_function_id.hpp  neuro_meta.hpp
include/Trixy/Neuro/Function/: neuro_function_id.hpp  neuro_loss.hpp
include/Trixy/Neuro/Functional/: Base.hpp  BaseFunctional.hpp  Core.hpp  FFNN_functional.hpp  FeedForwardNet.hpp  FeedForwardNetFunctional.hpp  FunctionalCore.hpp  Id.hpp  IdFunctional.hpp  base_functional.hpp  feedforward_neuro_functional.hpp  neuro_functional_id.hpp
include/Trixy/Neuro/Functional/Function/: Activation.hpp  ActivationFunction.hpp  ActivationFunctionLess.hpp  ActivationLess.hpp  Base.hpp  Core.hpp  FunctionCore.hpp  Loss.hpp  LossFunction.hpp  neuro_activation.hpp  neuro_activation_less.hpp  neuro_loss.hpp  neuro_optimization.hpp
include/Trixy/Neuro/Functional/Optimization/: OptimizationCore.hpp  (+2 more)
include/Trixy/Neuro/Network/: Base.hpp  BaseTrixyNet.hpp  ConvolutionalNet.hpp  Core.hpp  ExperimentalNet.hpp  FFNN.hpp  FeedForwardNet.hpp  FeedForwardNetLess.hpp  Require.hpp  TrixyNetCore.hpp  TrixyNetRequire.hpp  UnifiedNet.hpp  feedforward_neuro.hpp  feedforward_neuro_less.hpp  neuro_network_base.hpp
include/Trixy/Neuro/Regression/: Base.hpp  BaseRegression.hpp  Core.hpp  Linear.hpp  LinearRegression.hpp  Polynomial.hpp  PolynomialRegression.hpp  RegressionCore.hpp  RegressionRequire.hpp  Require.hpp  linear_regression.hpp  polynomial_regression.hpp  regression_base.hpp
include/Trixy/Neuro/Serialization/: Base.hpp  BaseSerializer.hpp  Core.hpp  FFNN_serializer.hpp  FeedForwardNet.hpp  FeedForwardNetSerializer.hpp  LinearRegression.hpp  LinearRegressionSerializer.hpp  PolynomialRegression.hpp  PolynomialRegressionSerializer.hpp  SerializerCore.hpp  base_serializer.hpp  feedforward_neuro_serializer.hpp  linear_regression_serializer.hpp  polynomial_regression_serializer.hpp
include/Trixy/Neuro/Serializer/: Base.hpp  Core.hpp  FeedForwardNet.hpp  LinearRegression.hpp  PolynomialRegression.hpp
include/Trixy/Neuro/Training/: Base.hpp  BaseTraining.hpp  Core.hpp  FeedForwardNet.hpp  FeedForwardNetTraining.hpp  LinearRegression.hpp  LinearRegressionTraining.hpp  PolynomialRegression.hpp  PolynomialRegressionTraining.hpp  TrainingCore.hpp  UnifiedNet.hpp
include/Trixy/Random/: Core.hpp
include/Trixy/Range/: Base.hpp  Core.hpp  Unified.hpp  View.hpp
include/Trixy/Range/Detail/: Meta.hpp
include/Trixy/Require/: Base.hpp  BaseRequire.hpp  Container.hpp  ContainerRequire.hpp  Core.hpp  Linear.hpp  LinearRequire.hpp  Matrix.hpp  MatrixRequire.hpp  Precision.hpp  PrecisionRequire.hpp  Tensor.hpp  Vector.hpp  VectorRequire.hpp
include/Trixy/Serializer/: Core.hpp  SerializationFixture.hpp
include/Utility/: Core.hpp  mnist_reader.hpp  mnist_reader_common.hpp  util.hpp  utility.hpp
include/UtilityMaster/: util.hpp  utils.hpp
package/: TrixyNet.hpp
src/: experimental_test.cpp  mnist_test.cpp  regression_test.cpp  simple_test.cpp  speed_test.cpp  test.cpp
test/: CMakeLists.txt  auto_tests.cpp  experimental_test.cpp  mnist_test.cpp  regression_test.cpp  simple_test.cpp  speed_test.cpp
test/mnist_test/: mnist_test.cpp
test/src/: TrixyTestingBase.cpp  TrixyTestingBase.hpp  auto_tests.cpp  debug_tools.hpp  main.cpp  regression_test.cpp  simple_test.cpp
test/src/mnist_test/: mnist_reader.hpp  mnist_test.cpp
(+46 files in other folders)
